force-app/main/default/objects/Email_Service__c/Email_Service__c.object-meta.xml
<CustomObject>
    <label>Email Service</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>