force-app/main/default/objects/Email_Service__c/fields/BORName__c.field-meta.xml
<CustomField>
    <fullName>BORName__c</fullName>
    <label>BORName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>