force-app/main/default/objects/Email_Service__c/fields/Calculate_7_days__c.field-meta.xml
<CustomField>
    <fullName>Calculate_7_days__c</fullName>
    <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate 7 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>