force-app/main/default/objects/Email_Service__c/fields/cc_address__c.field-meta.xml
<CustomField>
    <fullName>cc_address__c</fullName>
    <label>cc address</label>
    <type>TextArea</type>
</CustomField>