force-app/main/default/objects/Email_Service__c/fields/Disband_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Disband_By_Name__c</fullName>
    <label>Disband By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>