force-app/main/default/objects/Email_Service__c/fields/send_email_after_7_days__c.field-meta.xml
<CustomField>
    <fullName>send_email_after_7_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>send email after 7 days</label>
    <type>Checkbox</type>
</CustomField>