force-app/main/default/objects/Email_Service__c/fields/Team_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Name__c</fullName>
    <label>Team Lead Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>