force-app/main/default/objects/Email_Service__c/fields/Team_Option__c.field-meta.xml
<CustomField>
    <fullName>Team_Option__c</fullName>
    <label>Team Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>