force-app/main/default/objects/Email_Service__c/fields/To_address__c.field-meta.xml
<CustomField>
    <fullName>To_address__c</fullName>
    <label>To address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>