force-app/main/default/objects/Email_Service__c/fields/what_Id__c.field-meta.xml
<CustomField>
    <fullName>what_Id__c</fullName>
    <label>what Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>